--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -3,13 +3,15 @@
 <%= link_to 'New article', new_article_path, class: 'btn btn-primary' %>
 
 <div class="table-responsive default-padding-top">
+  <div class="text-right">
+    <%= page_entries_info @articles %>
+  </div>
   <table class="table">
     <tr>
       <th>Title</th>
       <th>Text</th>
       <th colspan="3"></th>
     </tr>
-
     <% @articles.each do |article| %>
         <tr>
           <td><%= article.title %></td>
@@ -20,6 +22,9 @@
         </tr>
     <% end %>
   </table>
+  <div class="text-center">
+    <%= will_paginate @articles %>
+  </div>
 </div>
 
 <%= link_to 'Main page', root_path , class: 'btn btn-default' %>
