--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
 
   <footer class="footer">
     <div class="container">
-      <p class="text-center text-muted default-padding-top">This is an application test in Ruby on Rails</p>
+      <p class="text-center text-muted default-padding-top">This is an application test using Ruby on Rails</p>
     </div>
   </footer>
 </html>
