--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,5 +4,5 @@
   <%= @article.text %>
 </p>
 
-<%= link_to 'Edit', edit_article_path(@article), class: 'btn btn-primary'%>
-<%= link_to 'Back', articles_path, class: 'btn btn-default' %>
+<%= link_to t('application.edit'), edit_article_path(@article), class: 'btn btn-primary'%>
+<%= link_to t('application.back'), articles_path, class: 'btn btn-default' %>
