--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Articles</h1>
+<h1><%= t '.articles' %></h1>
 
-<%= link_to 'New article', new_article_path, class: 'btn btn-primary' %>
+<%= link_to t('.new') , new_article_path, class: 'btn btn-primary' %>
 
 <div class="table-responsive default-padding-top">
   <div class="text-right">
@@ -8,17 +8,17 @@
   </div>
   <table class="table">
     <tr>
-      <th>Title</th>
-      <th>Text</th>
+      <th><%= t '.title' %></th>
+      <th><%= t '.text' %></th>
       <th colspan="3"></th>
     </tr>
     <% @articles.each do |article| %>
         <tr>
           <td><%= article.title %></td>
           <td><%= article.text %></td>
-          <td><%= link_to 'Show', article_path(article) %></td>
-          <td><%= link_to 'Edit', edit_article_path(article) %></td>
-          <td><%= link_to 'Destroy', article_path(article), method: :delete, data: { confirm: 'Are you sure?' }%></td>
+          <td><%= link_to t('application.show'), article_path(article) %></td>
+          <td><%= link_to t('application.edit'), edit_article_path(article) %></td>
+          <td><%= link_to t('application.destroy'), article_path(article), method: :delete, title: t('application.confirm'), data: {confirm: t('.confirm'), commit: t('application.commit'), cancel: t('application.cancel') } %></td>
         </tr>
     <% end %>
   </table>
@@ -27,4 +27,4 @@
   </div>
 </div>
 
-<%= link_to 'Main page', root_path , class: 'btn btn-default' %>
+<%= link_to t('application.back'), root_path , class: 'btn btn-default' %>
