--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,9 @@
-<% @articles.each do |article| %>
+<%- #Russian doll caching -%>
+<% cache(cache_key_for_articles) do %>
+  <% @articles.each do |article| %>
+    <% cache(p) do %>
       <h1><%= article.title %></h1>
       <p><%= article.text %></p>
+    <% end %>
+  <% end %>
 <% end %>
